[package]
name = "cc3220sf"
version = "0.1.0"
authors = ["matt"]
edition = "2018"
description = "Peripheral access crate for the Texas Instruments CC3220SF"
keywords = ["svd2rust", "cortex-m", "arm", "cc3220sf", "TI"]
license = "GPL-3.0"
repository = "https://github.com/moge233/cc3220sf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.12"

[features]
rt = ["cortex-m-rt/device"]
